db_assignment/bridge/base/mysql-deployment.yaml
#! mysql-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
    namespace: 02-db-assignment-2-grupp6
    labels:
        com.docker.compose.project: 02_db_assignment_2_grupp6
        com.docker.compose.service: mysql
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: 02_db_assignment_2_grupp6
            com.docker.compose.service: mysql
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: 02_db_assignment_2_grupp6
                com.docker.compose.service: mysql
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: library-db
                  image: mysql:9.4
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: mysql-3306
                      containerPort: 3306
                    - name: mysql-33060
                      containerPort: 33060
                  volumeMounts:
                    - name: docker-entrypoint-initdb-d
                      mountPath: /docker-entrypoint-initdb.d
            volumes:
                - name: docker-entrypoint-initdb-d
                  hostPath:
                    path: /Users/catherineperalta/git/02_db_assignment_2_GRUPP6/sql
